force-app/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <description>会員の基本情報。顧客台帳から連携している項目（唄）</description>
    <label>販売会員情報</label>
    <nameField>
        <label>会員名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>