force-app/main/default/objects/Member__c/fields/Add_Document_folder__c.field-meta.xml
<CustomField>
    <fullName>Add_Document_folder__c</fullName>
    <label>追加書類フォルダ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>