force-app/main/default/objects/Member__c/fields/Agent_fee_CR__c.field-meta.xml
<CustomField>
    <fullName>Agent_fee_CR__c</fullName>
    <label>Agent fee（CR課）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>