force-app/main/default/objects/Member__c/fields/approach_frequency__c.field-meta.xml
<CustomField>
    <fullName>approach_frequency__c</fullName>
    <label>アプローチ頻度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>常に</fullName>
            </value>
            <value>
                <fullName>対象車両のみ</fullName>
            </value>
            <value>
                <fullName>顧客任せ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>