force-app/main/default/objects/Member__c/fields/approval_authority2__c.field-meta.xml
<CustomField>
    <fullName>approval_authority2__c</fullName>
    <label>決裁権限2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕入れ決裁</fullName>
            </value>
            <value>
                <fullName>販売決裁</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>