force-app/main/default/objects/Member__c/fields/area_biko__c.field-meta.xml
<CustomField>
    <fullName>area_biko__c</fullName>
    <label>エリアの備考</label>
    <type>TextArea</type>
</CustomField>