force-app/main/default/objects/Member__c/fields/Area_PIC__c.field-meta.xml
<CustomField>
    <fullName>Area_PIC__c</fullName>
    <formula>CASE(
  West_East__c,
  &quot;東日本&quot;, &quot;稲岡 / 冨士原 / 玉木&quot;,
  &quot;西日本&quot;, &quot;嘉手苅 / 迎山 / 中村&quot;,
  &quot;未設定&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エリア担当</label>
    <type>Text</type>
</CustomField>