force-app/main/default/objects/Member__c/fields/as_member_no__c.field-meta.xml
<CustomField>
    <fullName>as_member_no__c</fullName>
    <label>AS会員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>