force-app/main/default/objects/Member__c/fields/as_member_report__c.field-meta.xml
<CustomField>
    <fullName>as_member_report__c</fullName>
    <label>AS会員報告日</label>
    <type>DateTime</type>
</CustomField>