force-app/main/default/objects/Member__c/fields/assessment_category__c.field-meta.xml
<CustomField>
    <fullName>assessment_category__c</fullName>
    <label>査定区分（代理出品）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>