force-app/main/default/objects/Member__c/fields/attached_file_attached_file_url_id1__c.field-meta.xml
<CustomField>
    <fullName>attached_file_attached_file_url_id1__c</fullName>
    <label>パスポートアップロード用URL</label>
    <type>Url</type>
</CustomField>