force-app/main/default/objects/Member__c/fields/attached_file_attached_file_url_id3__c.field-meta.xml
<CustomField>
    <fullName>attached_file_attached_file_url_id3__c</fullName>
    <label>免許証アップロード用URL（裏）</label>
    <type>Url</type>
</CustomField>