force-app/main/default/objects/Member__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <defaultValue>&quot;特になし。&quot;</defaultValue>
    <description>ここに記載があった場合、注意書きが表示。
ロングテキストは不可。Alertが反応しなくなる。</description>
    <label>注意喚起</label>
    <type>TextArea</type>
</CustomField>