force-app/main/default/objects/Member__c/fields/Aucbid_ID__c.field-meta.xml
<CustomField>
    <fullName>Aucbid_ID__c</fullName>
    <label>オークビットID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>