force-app/main/default/objects/Member__c/fields/auto_bkak_kbn__c.field-meta.xml
<CustomField>
    <fullName>auto_bkak_kbn__c</fullName>
    <label>自動売却</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>NG</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>OK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>