force-app/main/default/objects/Member__c/fields/Birthplace1__c.field-meta.xml
<CustomField>
    <fullName>Birthplace1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>顧客担当者　出身国1</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Birthplace1</relationshipName>
    <type>Lookup</type>
</CustomField>