force-app/main/default/objects/Member__c/fields/Birthplace2__c.field-meta.xml
<CustomField>
    <fullName>Birthplace2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>顧客担当者　出身国2</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Birthplace2</relationshipName>
    <type>Lookup</type>
</CustomField>