force-app/main/default/objects/Member__c/fields/bkak_caution_kbn__c.field-meta.xml
<CustomField>
    <fullName>bkak_caution_kbn__c</fullName>
    <label>売却時注意（ブラック）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>設定しない</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>設定する</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>