force-app/main/default/objects/Member__c/fields/bnkt_shri_kbn__c.field-meta.xml
<CustomField>
    <fullName>bnkt_shri_kbn__c</fullName>
    <label>分割支払</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>しない</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>する</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>