force-app/main/default/objects/Member__c/fields/business_registration_number__c.field-meta.xml
<CustomField>
    <fullName>business_registration_number__c</fullName>
    <label>適格請求書発行事業者登録番号（インボイス番号 ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>