force-app/main/default/objects/Member__c/fields/certificate_expiry_date1__c.field-meta.xml
<CustomField>
    <fullName>certificate_expiry_date1__c</fullName>
    <label>パスポート有効期限</label>
    <type>Date</type>
</CustomField>