force-app/main/default/objects/Member__c/fields/certificate_expiry_date2__c.field-meta.xml
<CustomField>
    <fullName>certificate_expiry_date2__c</fullName>
    <label>免許証有効期限</label>
    <type>Date</type>
</CustomField>