force-app/main/default/objects/Member__c/fields/certificate_no1__c.field-meta.xml
<CustomField>
    <fullName>certificate_no1__c</fullName>
    <label>パスポート番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>