force-app/main/default/objects/Member__c/fields/certificate_no2__c.field-meta.xml
<CustomField>
    <fullName>certificate_no2__c</fullName>
    <label>免許証番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>