force-app/main/default/objects/Member__c/fields/certificate_no3__c.field-meta.xml
<CustomField>
    <fullName>certificate_no3__c</fullName>
    <label>古物商番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>