force-app/main/default/objects/Member__c/fields/change_dt__c.field-meta.xml
<CustomField>
    <fullName>change_dt__c</fullName>
    <label>最終変更日時</label>
    <type>DateTime</type>
</CustomField>