force-app/main/default/objects/Member__c/fields/Change_Management_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>変更管理　確認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Management_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>