force-app/main/default/objects/Member__c/fields/Check111__c.field-meta.xml
<CustomField>
    <fullName>Check111__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェック項目</label>
    <type>Checkbox</type>
</CustomField>