force-app/main/default/objects/Member__c/fields/check_dt__c.field-meta.xml
<CustomField>
    <fullName>check_dt__c</fullName>
    <label>最終確認日時</label>
    <type>DateTime</type>
</CustomField>