force-app/main/default/objects/Member__c/fields/client_tant_nm2__c.field-meta.xml
<CustomField>
    <fullName>client_tant_nm2__c</fullName>
    <label>顧客担当者名2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>