force-app/main/default/objects/Member__c/fields/client_tant_nm__c.field-meta.xml
<CustomField>
    <fullName>client_tant_nm__c</fullName>
    <label>顧客担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>