force-app/main/default/objects/Member__c/fields/closing_detail_kbn__c.field-meta.xml
<CustomField>
    <fullName>closing_detail_kbn__c</fullName>
    <label>締め詳細区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>都度</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>20日締め</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>25日締め</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>月末締め</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>月曜日締め</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>火曜日締め</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>水曜日締め</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>木曜日締め</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>金曜日締め</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>5日締め</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>10日締め</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>15日締め</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>