force-app/main/default/objects/Member__c/fields/competing_agency__c.field-meta.xml
<CustomField>
    <fullName>competing_agency__c</fullName>
    <label>代行競合会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>