force-app/main/default/objects/Member__c/fields/competing_agency_condition__c.field-meta.xml
<CustomField>
    <fullName>competing_agency_condition__c</fullName>
    <label>代行競合条件</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>