force-app/main/default/objects/Member__c/fields/country_cd__c.field-meta.xml
<CustomField>
    <fullName>country_cd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Country_Member</relationshipName>
    <type>Lookup</type>
</CustomField>