force-app/main/default/objects/Member__c/fields/Country_text__c.field-meta.xml
<CustomField>
    <fullName>Country_text__c</fullName>
    <formula>country_cd__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>国（分析用）</label>
    <type>Text</type>
</CustomField>