force-app/main/default/objects/Member__c/fields/credit_limit__c.field-meta.xml
<CustomField>
    <fullName>credit_limit__c</fullName>
    <label>クレジット限度額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>