force-app/main/default/objects/Member__c/fields/CS_PIC__c.field-meta.xml
<CustomField>
    <fullName>CS_PIC__c</fullName>
    <formula>CASE(
  West_East__c,
  &quot;東日本&quot;, &quot;伊東&quot;,
  &quot;西日本&quot;, &quot;杉田&quot;,
  &quot;未設定&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS担当</label>
    <type>Text</type>
</CustomField>