force-app/main/default/objects/Member__c/fields/currency_type__c.field-meta.xml
<CustomField>
    <fullName>currency_type__c</fullName>
    <label>請求通貨</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>JPY</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>