force-app/main/default/objects/Member__c/fields/dair_daik_tant_cd__c.field-meta.xml
<CustomField>
    <fullName>dair_daik_tant_cd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理代行担当者名</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Auction_Informations_ProxyRepresentative</relationshipName>
    <type>Lookup</type>
</CustomField>