force-app/main/default/objects/Member__c/fields/dair_spin_tsyo_kbn__c.field-meta.xml
<CustomField>
    <fullName>dair_spin_tsyo_kbn__c</fullName>
    <label>代理出品対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>代理出品対象外</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>代理出品対象</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>代理出品専用</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>代理出品管理課経由</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>