force-app/main/default/objects/Member__c/fields/days_until_payment__c.field-meta.xml
<CustomField>
    <fullName>days_until_payment__c</fullName>
    <label>支払までの営業日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>