force-app/main/default/objects/Member__c/fields/deal_good_customer_kbn__c.field-meta.xml
<CustomField>
    <fullName>deal_good_customer_kbn__c</fullName>
    <label>優良取引</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>通常</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>優良</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>