force-app/main/default/objects/Member__c/fields/default_payment_type__c.field-meta.xml
<CustomField>
    <fullName>default_payment_type__c</fullName>
    <label>決済種別初期値</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>一括</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>分割(通常)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>分割(特殊)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>クレジット</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>L/C</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>分割 or クレジット</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>