force-app/main/default/objects/Member__c/fields/del_apply_dt__c.field-meta.xml
<CustomField>
    <fullName>del_apply_dt__c</fullName>
    <label>削除申請日時</label>
    <type>Date</type>
</CustomField>