force-app/main/default/objects/Member__c/fields/del_apply_riyu__c.field-meta.xml
<CustomField>
    <fullName>del_apply_riyu__c</fullName>
    <label>削除申請理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>