force-app/main/default/objects/Member__c/fields/del_apply_tant_id__c.field-meta.xml
<CustomField>
    <fullName>del_apply_tant_id__c</fullName>
    <label>削除申請者ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>