force-app/main/default/objects/Member__c/fields/del_approval_dt__c.field-meta.xml
<CustomField>
    <fullName>del_approval_dt__c</fullName>
    <label>削除承認日時</label>
    <type>Date</type>
</CustomField>