force-app/main/default/objects/Member__c/fields/delay_penalty_privilege_kbn__c.field-meta.xml
<CustomField>
    <fullName>delay_penalty_privilege_kbn__c</fullName>
    <label>遅延ペナ優遇</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>対象外</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>入金</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>搬出</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>両方</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>