force-app/main/default/objects/Member__c/fields/Demolition_contractor__c.field-meta.xml
<CustomField>
    <fullName>Demolition_contractor__c</fullName>
    <formula>NOT( ISBLANK( sales_regular_holiday__c ) ) ||
NOT( ISBLANK( owned_truck__c ) ) ||
NOT( ISBLANK( area_biko__c ) ) ||
NOT( ISBLANK( limit_rlue__c ) ) ||
NOT( ISBLANK( etc_yard_um__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>解体業者</label>
    <type>Checkbox</type>
</CustomField>