force-app/main/default/objects/Member__c/fields/document_delay_penalty__c.field-meta.xml
<CustomField>
    <fullName>document_delay_penalty__c</fullName>
    <label>書類遅延ペナルティ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>