force-app/main/default/objects/Member__c/fields/domestic_address2__c.field-meta.xml
<CustomField>
    <fullName>domestic_address2__c</fullName>
    <label>以降住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>