force-app/main/default/objects/Member__c/fields/domestic_address__c.field-meta.xml
<CustomField>
    <fullName>domestic_address__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>