force-app/main/default/objects/Member__c/fields/DuplicateRecordsExistence__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRecordsExistence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重複レコード有無</label>
    <type>Checkbox</type>
</CustomField>