force-app/main/default/objects/Member__c/fields/etc_yard_um__c.field-meta.xml
<CustomField>
    <fullName>etc_yard_um__c</fullName>
    <label>別ヤード有無</label>
    <type>TextArea</type>
</CustomField>