force-app/main/default/objects/Member__c/fields/export1__c.field-meta.xml
<CustomField>
    <fullName>export1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>輸出先1</label>
    <referenceTo>Export_Information__c</referenceTo>
    <relationshipName>Export_Information1_Member</relationshipName>
    <type>Lookup</type>
</CustomField>