force-app/main/default/objects/Member__c/fields/extra_charge__c.field-meta.xml
<CustomField>
    <fullName>extra_charge__c</fullName>
    <label>追加手数料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>