force-app/main/default/objects/Member__c/fields/Final_activity_date__c.field-meta.xml
<CustomField>
    <fullName>Final_activity_date__c</fullName>
    <label>最終活動日　※New</label>
    <type>DateTime</type>
</CustomField>