force-app/main/default/objects/Member__c/fields/Final_sales_date__c.field-meta.xml
<CustomField>
    <fullName>Final_sales_date__c</fullName>
    <label>営業活動日時</label>
    <type>DateTime</type>
</CustomField>