force-app/main/default/objects/Member__c/fields/First_Auction_Date_in_oneprice__c.field-meta.xml
<CustomField>
    <fullName>First_Auction_Date_in_oneprice__c</fullName>
    <label>ワンプライス初回落札日</label>
    <type>Date</type>
</CustomField>