force-app/main/default/objects/Member__c/fields/First_Auction_Date_in_Yard_Storage__c.field-meta.xml
<CustomField>
    <fullName>First_Auction_Date_in_Yard_Storage__c</fullName>
    <description>ヤード保管　最終落札日に初めてデータが入った日付を自動で入力</description>
    <label>ヤード保管　初回落札日</label>
    <type>Date</type>
</CustomField>