force-app/main/default/objects/Member__c/fields/flg_InvoiceAbandoned__c.field-meta.xml
<CustomField>
    <fullName>flg_InvoiceAbandoned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求断念処理済みフラグ</label>
    <type>Checkbox</type>
</CustomField>