force-app/main/default/objects/Member__c/fields/flg_InvoiceAbandoning__c.field-meta.xml
<CustomField>
    <fullName>flg_InvoiceAbandoning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求断念申請中フラグ</label>
    <type>Checkbox</type>
</CustomField>