force-app/main/default/objects/Member__c/fields/foreign_purchase_volume__c.field-meta.xml
<CustomField>
    <fullName>foreign_purchase_volume__c</fullName>
    <inlineHelpText>SSS＝1,001台～
SS＝501～1,000台
S＝101～500台
A＝51～100台
B＝21～50台
C＝6～20台
D＝0～5台</inlineHelpText>
    <label>他国からの購入規模</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSS</fullName>
            </value>
            <value>
                <fullName>SS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>