force-app/main/default/objects/Member__c/fields/foreign_supplier__c.field-meta.xml
<CustomField>
    <fullName>foreign_supplier__c</fullName>
    <inlineHelpText>海外のどこから仕入れているのか、AA名等を記載して下さい。</inlineHelpText>
    <label>【海外】仕入場所</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>