force-app/main/default/objects/Member__c/fields/hnsy_check_date__c.field-meta.xml
<CustomField>
    <fullName>hnsy_check_date__c</fullName>
    <label>反社チェック完了日</label>
    <type>Date</type>
</CustomField>