force-app/main/default/objects/Member__c/fields/hon_toroku_audit_pms_i_ymd__c.field-meta.xml
<CustomField>
    <fullName>hon_toroku_audit_pms_i_ymd__c</fullName>
    <label>免許証アップロード日時</label>
    <type>DateTime</type>
</CustomField>