force-app/main/default/objects/Member__c/fields/Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment__c</fullName>
    <label>分割割合（初回）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>