force-app/main/default/objects/Member__c/fields/invoice_precautions__c.field-meta.xml
<CustomField>
    <fullName>invoice_precautions__c</fullName>
    <label>請求書注意事項</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>