force-app/main/default/objects/Member__c/fields/Invoice_Rule__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rule__c</fullName>
    <label>請求時ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>