force-app/main/default/objects/Member__c/fields/is_freight_cost__c.field-meta.xml
<CustomField>
    <fullName>is_freight_cost__c</fullName>
    <label>代理出品陸送費諸経費対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>対象外</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>対象</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>