force-app/main/default/objects/Member__c/fields/is_selling_judgement__c.field-meta.xml
<CustomField>
    <fullName>is_selling_judgement__c</fullName>
    <label>売却判断</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>不可</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>可</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>