force-app/main/default/objects/Member__c/fields/Japanese_branch__c.field-meta.xml
<CustomField>
    <fullName>Japanese_branch__c</fullName>
    <label>国内支店</label>
    <length>255</length>
    <type>Text</type>
</CustomField>