force-app/main/default/objects/Member__c/fields/job_title__c.field-meta.xml
<CustomField>
    <fullName>job_title__c</fullName>
    <label>役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>