force-app/main/default/objects/Member__c/fields/join_request_date__c.field-meta.xml
<CustomField>
    <fullName>join_request_date__c</fullName>
    <label>入会申込日</label>
    <type>Date</type>
</CustomField>