force-app/main/default/objects/Member__c/fields/jsha_spin_sryo_kakn_kbn__c.field-meta.xml
<CustomField>
    <fullName>jsha_spin_sryo_kakn_kbn__c</fullName>
    <label>自社出品確認</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>不要</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>