force-app/main/default/objects/Member__c/fields/kigy_sybt_kbn__c.field-meta.xml
<CustomField>
    <fullName>kigy_sybt_kbn__c</fullName>
    <label>企業種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>企業</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>個人</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>