force-app/main/default/objects/Member__c/fields/Last_Auction_Date_in_SAM__c.field-meta.xml
<CustomField>
    <fullName>Last_Auction_Date_in_SAM__c</fullName>
    <formula>IF(
    /* 両方に日付が入っている場合 */
    AND(
        NOT(ISBLANK(Last_Auction_Date_in_User_Storage__c)),
        NOT(ISBLANK(Last_Auction_Date_in_Yard_Storage__c))
    ),

    /* (真) 日付が大きい方(新しい方)を取得 */
    IF(
        Last_Auction_Date_in_User_Storage__c &gt; Last_Auction_Date_in_Yard_Storage__c,
        Last_Auction_Date_in_User_Storage__c,
        Last_Auction_Date_in_Yard_Storage__c
    ),

    /* (偽) どちらかが空なら、入っている方の値を採用 */
    BLANKVALUE(
        Last_Auction_Date_in_User_Storage__c,
        Last_Auction_Date_in_Yard_Storage__c
    )
)</formula>
    <label>SAM最終落札日</label>
    <type>Date</type>
</CustomField>