force-app/main/default/objects/Member__c/fields/Last_Auction_Date_in_Yard_Storage__c.field-meta.xml
<CustomField>
    <fullName>Last_Auction_Date_in_Yard_Storage__c</fullName>
    <label>ヤード保管　最終落札日</label>
    <type>Date</type>
</CustomField>