force-app/main/default/objects/Member__c/fields/Last_Bidding_Date_in_User_Storage__c.field-meta.xml
<CustomField>
    <fullName>Last_Bidding_Date_in_User_Storage__c</fullName>
    <label>ユーザー保管 最終入札日時</label>
    <type>DateTime</type>
</CustomField>