force-app/main/default/objects/Member__c/fields/last_login_date_hana__c.field-meta.xml
<CustomField>
    <fullName>last_login_date_hana__c</fullName>
    <label>SAM最終ログイン日時</label>
    <type>DateTime</type>
</CustomField>