force-app/main/default/objects/Member__c/fields/last_nkin_date_hana__c.field-meta.xml
<CustomField>
    <fullName>last_nkin_date_hana__c</fullName>
    <label>最終入金日時</label>
    <type>DateTime</type>
</CustomField>