force-app/main/default/objects/Member__c/fields/last_nkin_sgak_hana__c.field-meta.xml
<CustomField>
    <fullName>last_nkin_sgak_hana__c</fullName>
    <label>最終入金差額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>