force-app/main/default/objects/Member__c/fields/last_upd_dt_hana__c.field-meta.xml
<CustomField>
    <fullName>last_upd_dt_hana__c</fullName>
    <label>最終更新日</label>
    <type>DateTime</type>
</CustomField>