force-app/main/default/objects/Member__c/fields/LastBusinessActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastBusinessActivityDate__c</fullName>
    <label>最終営業活動日時</label>
    <type>DateTime</type>
</CustomField>