force-app/main/default/objects/Member__c/fields/limit_rlue__c.field-meta.xml
<CustomField>
    <fullName>limit_rlue__c</fullName>
    <label>リミットルール</label>
    <type>TextArea</type>
</CustomField>