force-app/main/default/objects/Member__c/fields/live_no_sank_fuka_riyu__c.field-meta.xml
<CustomField>
    <fullName>live_no_sank_fuka_riyu__c</fullName>
    <label>ライブ参加不可理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>